--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -19,7 +19,7 @@
       <div class="image">
         <img src="images/locsterLogo_Gruen.png" alt="Logo" />
       </div>
-      <div class="alert alert-info" th:text="${message}"></div>
+      <div th:if="${message}" class="alert alert-info" th:text="${message}"></div>
       <div class="form-text-container">
         <div class="form">
           <form th:action="@{/signup}" th:object="${signupUser}" method="POST" enctype="utf8">
