--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -22,7 +22,7 @@
       <div th:if="${message}" class="alert alert-info" th:text="${message}"></div>
       <div class="form-text-container">
         <div class="form">
-          <form th:action="@{/signup}" th:object="${signupUser}" method="POST" enctype="utf8">
+          <form th:action="@{/signup}" th:object="${signupUser}" method="POST" enctype="utf8" onsubmit="return onSubmit();">
             <div class="inputs">
               <input
                       type="text"
