update User info doesn't work

--- a/src/main/resources/static/css/navigation.css
+++ b/src/main/resources/static/css/navigation.css
@@ -73,7 +73,8 @@
 
 /* The dropdown container */
 .dropdown {
-  overflow: hidden;
+  position: relative;
+  display: inline-block;
 }
 
 /* Dropdown button */
