--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -4,79 +4,79 @@
 <head th:replace="fragments/head"></head>
 
 <head>
-  <link th:href = "@{/css/settings.css}" rel="stylesheet">
+    <link th:href="@{/css/settings.css}" rel="stylesheet">
 </head>
 
 <body>
 <header th:replace="fragments/nav"></header>
 <!-- Setting -->
 
-<div class="container">
-  <div class="box">
+<div class="container" th:object="${loggedInUser}">
+    <div class="box">
 
-    <div class="title">
-      <h2>Einstellungen</h2>
-    </div>
-
-    <form action="#">
-
-      <div class="inputs">
-        <input type="email" placeholder="Email-Adresse ändern">
-        <input type="password" placeholder="Passwort ändern">
-      </div>
-
-      <div class="privacy">
         <div class="title">
-          <h3>Privatssphäre</h3>
+            <h2>Einstellungen</h2>
         </div>
 
-        <div class="privacyBody">
+        <form action="#" th:action="@{/saveUser}" method="post">
 
-          <div class="selection">
-            <img src="icons/lock_closed.png" alt="logo">
-            <label for="privacy1">
-              Nur Freunde dürfen mir schreiben (Gästebuch und Chat) <br>
-              +Statistiken anschauen
-            </label>
-            <div class="checkbox">
-              <input type="radio" name="privacy" id="privacy1" value="#">
+            <div class="inputs">
+                <input type="email" placeholder="Email-Adresse ändern" th:field="*{emailAddress}">
+                <input type="password" placeholder="Passwort ändern" th:field="*{passwordHash}">
             </div>
-          </div>
 
-          <div class="selection">
-            <img src="icons/lock_open.png" alt="logo">
-            <label for="privacy2">
-              Freundes Freunde dürfen mir schreiben (Gästebuch und Chat)<br>
-              +Statistiken anschauen
-            </label>
-            <div class="checkbox">
-              <input type="radio" name="privacy" id="privacy2" value="#">
+            <div class="privacy">
+                <div class="title">
+                    <h3>Privatssphäre</h3>
+                </div>
+
+                <div class="privacyBody">
+
+                    <div class="selection">
+                        <img src="icons/lock_closed.png" alt="logo">
+                        <label for="privacy1">
+                            Nur Freunde dürfen mir schreiben (Gästebuch und Chat) <br>
+                            +Statistiken anschauen
+                        </label>
+                        <div class="checkbox">
+                            <input type="radio" name="privacy" id="privacy1" value="#">
+                        </div>
+                    </div>
+
+                    <div class="selection">
+                        <img src="icons/lock_open.png" alt="logo">
+                        <label for="privacy2">
+                            Freundes Freunde dürfen mir schreiben (Gästebuch und Chat)<br>
+                            +Statistiken anschauen
+                        </label>
+                        <div class="checkbox">
+                            <input type="radio" name="privacy" id="privacy2" value="#">
+                        </div>
+                    </div>
+
+                    <div class="selection">
+                        <img src="icons/world.png" alt="logo">
+                        <label for="privacy3">
+                            Jeder darf mir schreiben (Gästebuch und Chat) <br>
+                            +Statistiken anschauen
+                        </label>
+                        <div class="checkbox">
+                            <input type="radio" name="privacy" id="privacy3" value="#">
+                        </div>
+                    </div>
+
+                </div>
             </div>
-          </div>
-
-          <div class="selection">
-            <img src="icons/world.png" alt="logo">
-            <label for="privacy3">
-              Jeder darf mir schreiben (Gästebuch und Chat) <br>
-              +Statistiken anschauen
-            </label>
-            <div class="checkbox">
-              <input type="radio" name="privacy" id="privacy3" value="#">
+            <div class="buttons">
+                <div class="delete">
+                    <button class="profileDeleteBtn">Profil löschen</button>
+                </div>
+                <div class="submit">
+                    <button class="submitBtn"><img src="icons/accept.svg" alt="logo"></button>
+                </div>
             </div>
-          </div>
-
-        </div>
-      </div>
-      <div class="buttons">
-        <div class="delete">
-          <button class="profileDeleteBtn">Profil löschen</button>
-        </div>
-        <div class="submit">
-          <button class="submitBtn"><img src="icons/accept.svg" alt="logo"></button>
-        </div>
-      </div>
-    </form>
-  </div>
+        </form>
+    </div>
 </div>
 </body>
 </html>
