update User in settings

--- a/src/main/resources/templates/profilepage.html
+++ b/src/main/resources/templates/profilepage.html
@@ -67,11 +67,7 @@
             </div>
         </div>
         <div class="icon-edit-content">
-            <img
-                    src="icons/pen.png"
-                    alt="pen"
-                    onclick="displayprofileEdit()"
-            />
+            <img src="icons/pen.png" alt="pen" onclick="displayprofileEdit()"/>
         </div>
     </div>
 
