--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -11,18 +11,53 @@
 <header th:replace="fragments/nav"></header>
 <!-- Setting -->
 
-<div class="container" th:object="${loggedInUser}">
+
+<div class="container" th:object="${settingsUser}">
     <div class="box">
 
         <div class="title">
             <h2>Einstellungen</h2>
         </div>
 
-        <form action="#" th:action="@{/saveUser}" method="post">
+        <form action="#" th:action="@{/settings}" method="post">
 
             <div class="inputs">
+                <input type="text" th:field="*{firstName}" placeholder="Vorname"/>
+                <span th:errors="*{firstName}" class="alert alert-danger"></span>
+                <input type="text" th:field="*{lastName}" placeholder="Nachname"/>
+                <span th:errors="*{lastName}" class="alert alert-danger"></span>
+                <input type="date" th:field="*{birthday}" placeholder="Geburtstag"/>
+                <span th:errors="*{birthday}" class="alert alert-danger"></span>
+
+                <label th:for="sex">Choose a gender:</label>
+                <select
+                        th:field="*{sex}"
+                >
+                    <option th:each="sexOpt : ${T(de.teamLocster.enums.Sex).values()}"
+                            th:value="${sexOpt}" th:text="${sexOpt}"></option>
+                </select>
+                <span th:errors="*{sex}" class="alert alert-danger"></span>
+
+                <input type="text" th:field="*{region}" placeholder="Ort"/>
+                <span th:errors="*{region}" class="alert alert-danger"></span>
+                <select
+                        th:field="*{relationshipStatus}"
+                >
+                    <option th:each="relationshipStatusOpt : ${T(de.teamLocster.enums.RelationshipStatus).values()}"
+                            th:value="${relationshipStatusOpt}" th:text="${relationshipStatusOpt}"></option>
+                </select>
+                <span th:errors="*{relationshipStatus}" class="alert alert-danger"></span>
+                <input type="text" th:field="*{occupation}" placeholder="Beruf"/>
+                <span th:errors="*{occupation}" class="alert alert-danger"></span>
+
+                <!-- TODO trennung zwischen persönlichen und account daten -->
+
                 <input type="email" placeholder="Email-Adresse ändern" th:field="*{emailAddress}">
-                <input type="password" placeholder="Passwort ändern" th:field="*{passwordHash}">
+                <span th:errors="*{emailAddress}" class="alert alert-danger"></span>
+                <input type="password" placeholder="Passwort ändern" th:field="*{password}">
+                <span th:errors="*{password}" class="alert alert-danger"></span>
+                <input type="password" placeholder="Passwort wiederholen" th:field="*{passwordRepeat}">
+                <span th:errors="*{passwordRepeat}" class="alert alert-danger"></span>
             </div>
 
             <div class="privacy">
@@ -67,7 +102,13 @@
 
                 </div>
             </div>
+
+
             <div class="buttons">
+                <div class="buttonsBtn">
+                    <button class="profileBtn" type="button">Profilbild ändern</button>
+                    <button class="profileBtn" type="button">Profilbild löschen</button>
+                </div>
                 <div class="delete">
                     <button class="profileDeleteBtn">Profil löschen</button>
                 </div>
