--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -1,106 +1,83 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-  <head th:replace="fragments/head"> </head>
+<head th:replace="fragments/head"></head>
 
-  <head>
-    <link th:href = "@{/css/login.css}" rel="stylesheet">
-    <link th:href = "@{/css/signup.css}" rel="stylesheet">
-    <script type="text/javascript" th:src = "@{/js/signup.js}"></script>
-  </head>
+<head>
+    <link th:href="@{/css/login.css}" rel="stylesheet">
+    <link th:href="@{/css/signup.css}" rel="stylesheet">
+    <script type="text/javascript" th:src="@{/js/signup.js}"></script>
+</head>
 
-  <body>
-    <div class="link">
-      <a href="login" title="go to Login"
-        >Schon Teil der Crew? Hier geht's zum Log-In</a
-      >
+<body>
+<div class="link">
+    <a href="login" title="go to Login"
+    >Schon Teil der Crew? Hier geht's zum Log-In</a
+    >
+</div>
+
+<div class="content-wraper-image">
+    <div class="image">
+        <img src="images/locsterLogo_Gruen.png" alt="Logo"/>
     </div>
-
-    <div class="content-wraper-image">
-      <div class="image">
-        <img src="images/locsterLogo_Gruen.png" alt="Logo" />
-      </div>
-      <div th:if="${message}" class="alert alert-info" th:text="${message}"></div>
-      <div class="form-text-container">
+    <div th:if="${message}" class="alert alert-info" th:text="${message}"></div>
+    <div class="form-text-container">
         <div class="form">
-          <form th:action="@{/signup}" th:object="${signupUser}" method="POST" enctype="utf8" onsubmit="return onSubmit();">
-            <div class="inputs">
-              <input
-                      type="text"
-                      placeholder="Vorname"
-                      th:field="*{firstName}"
-              />
-              <span th:errors="*{firstName}" class="alert alert-danger"></span>
+            <form th:action="@{/signup}" th:object="${signupUser}" method="POST" enctype="utf8"
+                  onsubmit="return onSubmit();">
+                <div class="inputs">
+                    <input type="text" placeholder="Vorname" th:field="*{firstName}"/>
+                    <span th:errors="*{firstName}" class="alert alert-danger"></span>
 
-              <input
-                      type="text"
-                      placeholder="Nachname"
-                      th:field="*{lastName}"
-              />
-              <span th:errors="*{lastName}" class="alert alert-danger"></span>
+                    <input type="text" placeholder="Nachname" th:field="*{lastName}"/>
+                    <span th:errors="*{lastName}" class="alert alert-danger"></span>
 
-              <input
-                      type="date"
-                      placeholder="Dein Geburtsdatum"
-                      th:field="*{birthday}"
-              />
-              <span th:errors="*{birthday}" class="alert alert-danger"></span>
+                    <input type="date" placeholder="Dein Geburtsdatum" th:field="*{birthday}"/>
+                    <span th:errors="*{birthday}" class="alert alert-danger"></span>
 
-              <select
-                      th:field="*{sex}"
-              >
-                <option th:each="sexOpt : ${T(de.teamLocster.enums.Sex).values()}"
-                        th:value="${sexOpt}" th:text="${sexOpt}"></option>
-              </select>
-              <span th:errors="*{sex}" class="alert alert-danger"></span>
+                    <select th:field="*{sex}" class="userSelect">
+                        <option th:each="sexOpt : ${T(de.teamLocster.enums.Sex).values()}" th:value="${sexOpt}" th:text="${sexOpt}"></option>
+                    </select>
+                    <span th:errors="*{sex}" class="alert alert-danger"></span>
 
-              <input
-                      type="text"
-                      placeholder="Deine Email-Adresse"
-                      th:field="*{emailAddress}"
-              />
-              <span th:errors="*{emailAddress}" class="alert alert-danger"></span>
+                    <input type="text" placeholder="Deine Email-Adresse" th:field="*{emailAddress}"/>
+                    <span th:errors="*{emailAddress}" class="alert alert-danger"></span>
 
-              <input
-                      type="password"
-                      placeholder="Ein sicheres Passwort"
-                      onkeyup="onPasswordChanged()"
-                      th:field="*{password}"
+                    <input type="password" placeholder="Ein sicheres Passwort" onkeyup="onPasswordChanged()"
+                           th:field="*{password}"/>
+                    <span th:errors="*{password}" class="alert alert-danger"></span>
 
-              />
-              <span th:errors="*{password}" class="alert alert-danger"></span>
+                    <div>
+                        <p>
+                            Das Passwort muss mindestens
+                            <span class="length-8">8 Zeichen</span> enthalten, davon
+                            mindestens <br/>
+                            <span class="major">1 Großbuchstabe</span>,
+                            <span class="minor">1 Kleinbuchstabe</span>,
+                            <span class="number">1 Zahl</span>,
+                            <span class="special">1 Sonderzeichen</span>.
+                        </p>
+                    </div>
+                    <input
+                            th:field="*{passwordRepeat}"
+                            type="password"
+                            placeholder="Passwort wiederholen"
+                            onkeyup="onPasswordRepeatChanged()"
 
-              <div>
-                <p>
-                  Das Passwort muss mindestens
-                  <span class="length-8">8 Zeichen</span> enthalten, davon
-                  mindestens <br />
-                  <span class="major">1 Großbuchstabe</span>,
-                  <span class="minor">1 Kleinbuchstabe</span>,
-                  <span class="number">1 Zahl</span>,
-                  <span class="special">1 Sonderzeichen</span>.
-                </p>
-              </div>
-              <input
-                      th:field="*{passwordRepeat}"
-                      type="password"
-                      placeholder="Passwort wiederholen"
-                      onkeyup="onPasswordRepeatChanged()"
+                    />
+                    <span th:errors="*{passwordRepeat}" class="alert alert-danger"></span>
 
-              />
-              <span th:errors="*{passwordRepeat}" class="alert alert-danger"></span>
-
-            </div>
-            <div class="checkbox-button-container">
-              <div class="submitButton">
-                <button class="btn" type="submit">Registrieren</button>
-              </div>
-            </div>
-          </form>
+                </div>
+                <div class="checkbox-button-container">
+                    <div class="submitButton">
+                        <button class="btn" type="submit">Registrieren</button>
+                    </div>
+                </div>
+            </form>
         </div>
-      </div>
     </div>
+</div>
 
-    <!-- footer -->
-    <footer th:replace="fragments/footer"></footer>
-  </body>
+<!-- footer -->
+<footer th:replace="fragments/footer"></footer>
+</body>
 </html>
