update settings stylesheet

--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -5,6 +5,7 @@
 
 <head>
     <link th:href="@{/css/settings.css}" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -168,15 +169,11 @@
 
 -->
         <div class="buttons">
-            <div class="buttonsBtn">
-                <button class="profileBtn" type="button">Profilbild ändern</button>
-                <button class="profileBtn" type="button">Profilbild löschen</button>
-            </div>
             <div class="delete">
-                <button class="profileDeleteBtn">Profil löschen</button>
+                <button class="profileDeleteBtn submitBtn"><i class="fas fa-trash-alt"></i> Profile löschen</button>
             </div>
             <div class="submit">
-                <button class="submitBtn"><img src="icons/accept.svg" alt="logo"></button>
+                <button class="submitBtn"><i class="far fa-check-circle"></i> Speichern</button>
             </div>
         </div>
         </form>
