--- a/src/main/resources/templates/profilepage.html
+++ b/src/main/resources/templates/profilepage.html
@@ -24,10 +24,11 @@
             <div class="info">
                 <h2 class="profile_name" th:text="*{firstName + ' ' + lastName}"></h2>
                 <h2 class="profile_city" th:text="*{region}"></h2>
-                <button type="button" class="collapsible">mehr Infos</button>
+                <p class="profile_personal_status" th:text="*{personalStatus}"></p>
+                <p class="profile_online_status" th:text="*{onlineStatus}"></p>
                 <div class="content">
                     <div class="ProfileInfosHeader">
-                        <div class="group1">
+                        <div class="row">
                             <div class="birthday group profileinfo">
                                 <img class="profileInfoIcons" src="icons/cake.svg" alt="cake"/>
                                 <p th:text="*{birthDay}"></p>
@@ -37,7 +38,7 @@
                                 <p th:text="*{sex}"></p>
                             </div>
                         </div>
-                        <div class="group2">
+                        <div class="row">
                             <div class="relationship group profileinfo">
                                 <img class="profileInfoIcons" src="icons/heart-thin.svg" alt="heart"/>
                                 <p th:text="*{relationshipStatus}"></p>
@@ -47,20 +48,10 @@
                                 <p th:text="*{occupation}"></p>
                             </div>
                         </div>
-                        <div class="visitor profileinfo">
-                            <img class="profileInfoIcons" src="icons/guest-traveler.svg" alt="icon"/>
-                            <p>523</p>
-                        </div>
-                    </div>
-                    <div class="profileInfosFooter">
-                        <div class="lastVisitor">
-                            <p>letzter Besucher: Crab Kid</p>
-                        </div>
-                        <div class="newFriend">
-                            <p>neuester Freund: Crab Kong</p>
-                        </div>
-                        <div class="oldFriend">
-                            <p>ältester Freund: Crab Mommy</p>
+                        <div class="icon-edit-content">
+                            <a href="/settings">
+                                <img src="icons/pen.png" alt="pen"/>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -71,7 +62,9 @@
     <div class="box status">
         <p class="status" th:text="*{profileText}"></p>
         <div class="icon-edit-content">
-            <img src="icons/pen.png" alt="pen"/>
+            <a href="/settings">
+                <img src="icons/pen.png" alt="pen"/>
+            </a>
         </div>
     </div>
 
@@ -106,7 +99,9 @@
             </div>
         </div>
         <div class="icon-edit-content">
-            <img src="icons/pen.png" alt="pen"/>
+            <a href="/settings">
+                <img src="icons/pen.png" alt="pen"/>
+            </a>
         </div>
     </div>
 
@@ -129,7 +124,9 @@
             </div>
         </div>
         <div class="icon-edit-content">
-            <img src="icons/pen.png" alt="pen"/>
+            <a href="/settings">
+                <img src="icons/pen.png" alt="pen"/>
+            </a>
         </div>
     </div>
 </div>
