1. move the font awesome script from setting to head. 2. Editing profilepage.css 3. Editing of the profilepage.html 4. Editing of profilePage.js 5. Adaptation of the profile page controller 6. Create a ProfileTextUser to update the profile text 7. settings css formatting 8. new method (updateProfileText in UserService)
all for profile text edit

--- a/src/main/resources/static/css/profilepage.css
+++ b/src/main/resources/static/css/profilepage.css
@@ -1,6 +1,36 @@
 /* profileInfo & profileEdit */
-#profileEdit {
+.profiltextEdit {
   display: none;
+}
+
+.profiltextEdit .title {
+  padding: 20px;
+}
+
+.profiltextEdit form input {
+  font-size: 14px;
+  padding: 5px;
+  display: block;
+  width: 600px;
+  border: none;
+  border-bottom: 1px solid #757575;
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-between;
+
+  padding: 10px;
+  padding-left: 15px;
+
+}
+
+.submitBtn {
+  background: none;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+  box-shadow: 0 0 5px;
 }
 
 .editFields form {
@@ -167,6 +197,7 @@
 .icon-edit-content {
   align-self: flex-end;
   margin: 0 15px 10px 0;
+  cursor: pointer;
 }
 
 .icon-edit-content img {
