--- a/src/main/resources/static/css/settings.css
+++ b/src/main/resources/static/css/settings.css
@@ -1,173 +1,202 @@
 .privacy {
-  width: 512px;
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  margin: 10px 40px 50px 15px;
-  padding-left: 15px;
-  border-radius: 25px;
-  border: solid #fed700;
+    width: 512px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    margin: 10px 40px 50px 15px;
+    padding-left: 15px;
+    border-radius: 25px;
+    border: solid #fed700;
 }
 
 .privacy .title h3 {
-  padding: 10px 0 30px 0;
+    padding: 10px 0 30px 0;
 }
 
 .privacyBody {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 .selection {
-  display: flex;
-  flex-direction: initial;
-  padding: 10px;
-  justify-content: space-around;
+    display: flex;
+    flex-direction: initial;
+    padding: 10px;
+    justify-content: space-around;
 }
 
 .selection img {
-  padding-right: 10px;
-  height: 30px;
+    padding-right: 10px;
+    height: 30px;
 }
 
 .selection label {
-  max-width: 300px;
+    max-width: 300px;
 }
 
 .buttons {
-  display: flex;
-  justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 
-  padding: 10px;
-  padding-left: 15px;
+    padding: 10px;
+    padding-left: 15px;
 
 }
 
 .submit img {
-  width: 70px;
-  height: 70px;
+    width: 70px;
+    height: 70px;
 }
 
 .submitBtn {
-  background: none;
-  border: none;
-  font-size:20px;
-  cursor: pointer;
-  box-shadow: 0 0 5px;
+    background: none;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+    box-shadow: 0 0 5px;
 }
 
 
 /*======================new css code====================*/
 
 /* basic stylings ------------------------------------------ */
-.container 		{
-  display:block;
-  flex-wrap: nowrap;
-  margin:30px auto 0;
-  padding:10px 50px 50px;
+.container {
+    display: block;
+    flex-wrap: nowrap;
+    margin: 30px auto 0;
+    padding: 10px 50px 50px;
 }
 
-h2 		 {
-  text-align:center;
-  margin-bottom:50px;
+h2 {
+    text-align: center;
+    margin-bottom: 50px;
 }
+
 h2 small {
-  font-weight:normal;
-  color:#888;
-  display:block;
+    font-weight: normal;
+    color: #888;
+    display: block;
 }
 
 /* form starting stylings ------------------------------- */
-.group 			  {
-  position:relative;
-  margin-bottom:45px;
-  display: inline-grid;
-  margin-left: 20px;
+.group {
+    position: relative;
+    margin-bottom: 45px;
+    display: inline-grid;
+    margin-left: 20px;
 }
-input, .userSelect				{
-  font-size:18px;
-  padding:5px;
-  display:block;
-  width:300px;
-  border:none;
-  border-bottom:1px solid #757575;
+
+input, .userSelect {
+    font-size: 18px;
+    padding: 5px;
+    display: block;
+    width: 300px;
+    border: none;
+    border-bottom: 1px solid #757575;
 }
-input:focus 		{ outline:none; }
+
+input:focus {
+    outline: none;
+}
 
 /* LABEL ======================================= */
-label				 {
-  color:#999;
-  font-size:18px;
-  font-weight:normal;
-  position:absolute;
-  pointer-events:none;
-  left:5px;
-  top:10px;
-  transition:0.2s ease all;
-  -moz-transition:0.2s ease all;
-  -webkit-transition:0.2s ease all;
+label {
+    color: #999;
+    font-size: 18px;
+    font-weight: normal;
+    position: absolute;
+    pointer-events: none;
+    left: 5px;
+    top: 10px;
+    transition: 0.2s ease all;
+    -moz-transition: 0.2s ease all;
+    -webkit-transition: 0.2s ease all;
 }
 
 /* active state */
-input:focus ~ label, input:valid ~ label 		{
-  top:-20px;
-  font-size:14px;
-  color:#5264AE;
+input:focus ~ label, input:valid ~ label {
+    top: -20px;
+    font-size: 14px;
+    color: #5264AE;
 }
 
 /* BOTTOM BARS ================================= */
-.bar 	{ position:relative; display:block; width:300px; }
-.bar:before, .bar:after 	{
-  content:'';
-  height:2px;
-  width:0;
-  bottom:1px;
-  position:absolute;
-  background:#5264AE;
-  transition:0.2s ease all;
-  -moz-transition:0.2s ease all;
-  -webkit-transition:0.2s ease all;
+.bar {
+    position: relative;
+    display: block;
+    width: 300px;
 }
+
+.bar:before, .bar:after {
+    content: '';
+    height: 2px;
+    width: 0;
+    bottom: 1px;
+    position: absolute;
+    background: #5264AE;
+    transition: 0.2s ease all;
+    -moz-transition: 0.2s ease all;
+    -webkit-transition: 0.2s ease all;
+}
+
 .bar:before {
-  left:50%;
+    left: 50%;
 }
+
 .bar:after {
-  right:50%;
+    right: 50%;
 }
 
 /* active state */
 input:focus ~ .bar:before, input:focus ~ .bar:after {
-  width:50%;
+    width: 50%;
 }
 
 /* HIGHLIGHTER ================================== */
 .highlight {
-  position:absolute;
-  height:60%;
-  width:100px;
-  top:25%;
-  left:0;
-  pointer-events:none;
-  opacity:0.5;
+    position: absolute;
+    height: 60%;
+    width: 100px;
+    top: 25%;
+    left: 0;
+    pointer-events: none;
+    opacity: 0.5;
 }
 
 /* active state */
 input:focus ~ .highlight {
-  -webkit-animation:inputHighlighter 0.3s ease;
-  -moz-animation:inputHighlighter 0.3s ease;
-  animation:inputHighlighter 0.3s ease;
+    -webkit-animation: inputHighlighter 0.3s ease;
+    -moz-animation: inputHighlighter 0.3s ease;
+    animation: inputHighlighter 0.3s ease;
 }
 
 /* ANIMATIONS ================ */
 @-webkit-keyframes inputHighlighter {
-  from { background:#5264AE; }
-  to 	{ width:0; background:transparent; }
+    from {
+        background: #5264AE;
+    }
+    to {
+        width: 0;
+        background: transparent;
+    }
 }
+
 @-moz-keyframes inputHighlighter {
-  from { background:#5264AE; }
-  to 	{ width:0; background:transparent; }
+    from {
+        background: #5264AE;
+    }
+    to {
+        width: 0;
+        background: transparent;
+    }
 }
+
 @keyframes inputHighlighter {
-  from { background:#5264AE; }
-  to 	{ width:0; background:transparent; }
+    from {
+        background: #5264AE;
+    }
+    to {
+        width: 0;
+        background: transparent;
+    }
 }
