--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -1,4 +1,5 @@
 <link th:href = "@{/css/navigation.css}" rel="stylesheet">
+<script type="text/javascript" th:src="@{/js/search.js}"></script>
 
 <nav th:fragment="nav" class="navigation">
     <div class="navContainer">
@@ -13,7 +14,7 @@
 
     <form>
         <div class="input-group">
-            <input type="text" placeholder="Search" />
+            <input id="searchBar" type="text" placeholder="Search" onchange="onSearchbarChanged()"/>
             <div class="input-group-btn">
                 <button type="submit">
                     <img src="icons/glass.png" class="search-icon" />
