--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -23,29 +23,29 @@
                     <span class="relationship">Beziehungstatus:</span>
                     <span class="region">Region:</span>
                 </li>
-<!--                <li th:each="u: ${user}" class="infos">-->
-<!--                    <span th:text="${u.firstName + ' ' + u.lastName}" class="name"></span>-->
-<!--                    <span th:text="${u.birthDay}" class="age"></span>-->
-<!--                    <span th:text="${u.sex}" class="gender"></span>-->
-<!--                    <span th:text="${u.relationshipStatus}" class="relationship"></span>-->
-<!--                    <span th:text="${u.region}" class="region"></span>-->
+                <li th:each="u: ${user}" class="infos">
+                    <span th:text="${u.firstName + ' ' + u.lastName}" class="name"></span>
+                    <span th:text="${u.birthDay}" class="age"></span>
+                    <span th:text="${u.sex}" class="gender"></span>
+                    <span th:text="${u.relationshipStatus}" class="relationship"></span>
+                    <span th:text="${u.region}" class="region"></span>
 
-<!--                    <span class="icon">-->
-<!--                <img-->
-<!--                        class="acceptFriendIcon"-->
-<!--                        src="icons/accept.svg"-->
-<!--                        alt="icon"-->
-<!--                />-->
-<!--              </span>-->
+                    <span class="icon">
+                <img
+                        class="acceptFriendIcon"
+                        src="icons/accept.svg"
+                        alt="icon"
+                />
+              </span>
 
-<!--                    <span class="icon">-->
-<!--                <img-->
-<!--                        class="notAcceptFriendIcon"-->
-<!--                        src="icons/accept.svg"-->
-<!--                        alt="icon"-->
-<!--                />-->
-<!--              </span>-->
-<!--                </li>-->
+                    <span class="icon">
+                <img
+                        class="notAcceptFriendIcon"
+                        src="icons/accept.svg"
+                        alt="icon"
+                />
+              </span>
+                </li>
 
             </ul>
 
