--- a/src/main/resources/templates/profilepage.html
+++ b/src/main/resources/templates/profilepage.html
@@ -61,10 +61,8 @@
 
     <div class="box status" id="status" title="Profiltext bearbeiten">
         <p class="status" th:text="*{profileText}"></p>
-        <div class="icon-edit-content" onclick = "displayprofileEdit()>
-            <a href="/settings">
-                <img src="icons/pen.png" alt="pen"/>
-            </a>
+        <div class="icon-edit-content" onclick = "displayprofileEdit()">
+            <img src="icons/pen.png" alt="pen"/>
         </div>
     </div>
 
@@ -75,8 +73,8 @@
             </div>
             <form action="#" th:action="@{/profilepage}" method="post">
                 <div class="inputs">
-                    <textarea type="text" th:field="*{profileText}" placeholder="Deine Profiltext" autofocus="autofocus"
-                              rows="8" cols="75" maxlength="75"></textarea>
+                    <textarea class="profileText" type="text" th:field="*{profileText}" placeholder="Deine Profiltext" autofocus="autofocus"
+                              rows="8" cols="75" maxlength="255"></textarea>
                     <span class="highlight"></span>
                     <span class="bar"></span>
                     <span th:errors="*{profileText}" class="alert alert-danger"></span>
