--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -12,16 +12,14 @@
 
     <!-- search -->
 
-    <form>
+    <form action="/search" method="get">
         <div class="input-group">
-            <form action="/search" method="get">
-                <input id="searchBar" type="text" placeholder="Search" onchange="onSearchbarChanged()"/>
-                <div class="input-group-btn">
-                    <button type="submit">
-                        <img src="icons/glass.png" class="search-icon" />
-                    </button>
-                </div>
-            </form>
+            <input id="searchBar" type="text" name="q" placeholder="Search"/>
+            <div class="input-group-btn">
+                <button type="submit">
+                    <img src="icons/glass.png" class="search-icon" />
+                </button>
+            </div>
         </div>
     </form>
 
