delete User in Settings funktioniert.

--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -173,7 +173,7 @@
                 </div>
             </div>
         </form>
-        <form action="#" th:action="@{/settings}" method="post" >
+        <form action="#" th:action="@{/delete}" method="post" >
             <div class="delete">
                 <button class="profileDeleteBtn submitBtn"><i class="fas fa-trash-alt"></i> Profile löschen</button>
             </div>
