--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -23,11 +23,11 @@
                     <span class="relationship">Beziehungstatus:</span>
                     <span class="region">Region:</span>
                 </li>
-                <li th:each="u: ${user}" class="infos">
+                <li th:each="u: ${users}" class="infos">
                     <span th:text="${u.firstName + ' ' + u.lastName}" class="name"></span>
-                    <span th:text="${u.birthDay}" class="age"></span>
-                    <span th:text="${u.sex}" class="gender"></span>
-                    <span th:text="${u.relationshipStatus}" class="relationship"></span>
+                    <span th:text="${u.getAge()}" class="age"></span>
+                    <span th:text="#{'labels.sex.'+${u.sex}}" class="gender"></span>
+                    <span th:text="#{'labels.relationshipStatus.'+${u.relationshipStatus}}" class="relationship"></span>
                     <span th:text="${u.region}" class="region"></span>
 
                     <span class="icon">
